--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button class="button">back</button>
         <button class="button show num">1</button>
         <button class="button show num">2</button>
-        <button class="button">=</button>
+        <button class="button eq">=</button>
         <button class="button show num">3</button>
         <button class="button show num">4</button>
         <button class="button show operator">+</button>
